--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     //Test depenencies
     testCompile ('junit:junit:4.12')
+    testCompile ('org.mockito:mockito-all:1.10.19')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
