--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,6 @@ include 'kodilla-stream:src:main:java:kodilla-exception'
 findProject(':kodilla-stream:src:main:java:kodilla-exception')?.name = 'kodilla-exception'
 include 'kodilla-exception'
 include 'kodilla-good-patterns'
+include 'kodilla-spring-intro'
+include 'kodilla-spring'
 
