--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id 'java'
 }
 
+
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -15,9 +21,11 @@ repositories {
 dependencies {
     //External
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-aop')
     //Test depenencies
     testCompile ('junit:junit:4.12')
     testCompile ('org.mockito:mockito-all:1.10.19')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
