--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,6 @@
 rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
 include 'kodilla-stream'
-include 'kodilla-stream'
-include 'kodilla-stream:src:main:java:kodilla-exception'
-findProject(':kodilla-stream:src:main:java:kodilla-exception')?.name = 'kodilla-exception'
 include 'kodilla-exception'
 include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
@@ -11,4 +8,5 @@ include 'kodilla-spring'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
+include 'kodilla-patterns2'
 
